--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -33,3 +33,4 @@ sha2 = { version = "0.10", features = ["oid"] }
 rsa = { version = "0.9", default-features = false, features = ["sha2", "pem"] }
 homedir = "0.3"
 hyper = { version = "0.14", features = ["full"] }
+url = "2"
