--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 log = "0.4"
 anyhow = "1"
 clap = { version = "4", features = ["derive"] }
+futures = "0.3"
 tokio = { version = "1", features = ["full"] }
 simple_logger = "5"
 ratatui = "0.27"
